# happiness-prediction

./: .gitignore  README.md  analysis.ipynb  data.dvc  exploration.ipynb  output.dvc  pyproject.toml  requirements.txt
.ipynb_checkpoints/: exploration-checkpoint.ipynb
api/: .env.development  Dockerfile  config.py  main.py  processing.py
api/app/: config.py  custom_types.py  main.py
api/models/: model_2026-07-15.onnx
