[project]
name = "midterm-coursework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi[standard]>=0.139.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "onnxruntime>=1.27.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "skl2onnx>=1.20.0",
]
